--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@next/third-parties": "^14.1.0",
     "axios": "^1.6.5",
     "clsx": "^2.1.0",
     "lucide-react": "^0.306.0",
-    "next": "14.0.4",
+    "next": "^14.1.0",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
